2002-06-19  Aruna Pourohit <aruna.pou@wipro.com>

        * gsearchtool.c: instead of just running search command, doing exec of
        the search command. Completely fixes #85131.

2002-06-13  Aruna Pourhit <aruna.pou@wipro.co>

	* gsearchtool.c (stop_search): Don't break if status of 
	child process is returned, since we want to kill the 
	child process. Fixes #85131.

2002-06-13  Glynn Foster  <glynn.foster@sun.com>

	* gsearchtool.c: (stop_search): Don't run a search when
	we just want to stop the search. Fixes part of #85131.

2002-06-01  Ross Burton  <ross@burtonini.com>

	* gsearchtool.c: Set the dialogs as a transient for the
	parent window.  Also pass a reference to the main window as the
	user data to the menu bar callbacks. Fixes #83799.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Fix GNOMELOCALEDIR to point to correct
	location. Fixes #83627.

2002-05-28 Yogeesh MB <yogeeshappa.mathighatta@wipro.com>

        * gsearchtool.c: Patch for the bug#82555 (exit before search
        completion results in crash)

2002-05-26 John Fleck <jfleck@inkstain.net>

	* help/C/gnome-search-tool.xml
	* help/C/figures/gnome-search-tool_window.png
	quick update of doc and screenshot to fix #79366
	The docs may be updated yet again by the Sun team, but this
	gives us something shippable.

2002-05-20  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c: Fix handling of searches for '*filename' 
	and 'filename' as this is not the same search criteria. This 
	is specific to simple searches that use the locate command.
	
2002-05-20  Glynn Foster <glynn.foster@sun.com>

	* gsearchtool.c: Remove mnemonics from tabs.

2002-05-16  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c: UTF-8->locale corrections.  Should fix 
	bug #80780.
	  
2002-05-09  Paolo Maggi <maggi@athena.polito.it>

	* gsearchtool.c: added a status bar with an activity
	bar

2002-05-08 Dennis Cranston <dennis_cranston@yahoo.com>
