@@ -6,5 +6,5 @@ Exec=gnome-search-tool
 Icon=gnome-searchtool.png
 Terminal=0
 Type=Application
-DocPath=gnome-search-tool/gnome-search-tool.xml
+X-GNOME-DocPath=gnome-search-tool/gnome-search-tool.xml
 Categories=Application;Core;
