@@ -1,4 +1,4 @@
-<?xml version="1.0" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <omf>
   <resource>
     <creator>
@@ -8,14 +8,13 @@
       gdocteam@sun.com (Sun Microsystems)
     </maintainer>
     <title>
-      Search Tool Manual V2.0
+      Search Tool Manual V2.1
     </title>
     <date>
-      2002-05-07
+      2002-07-13
     </date>
-    <version identifier="2.0" date="2002-05-07" 
-    description="Created for GNOME 2.0, program version 1.103.0"/>
-    <subject category="GNOME|Utilities"/>
+    <version identifier="2.1" date="2002-07-13" description="Created for GNOME 2.0, program version 1.107.0"/>
+    <subject category="GNOME|Desktop"/>
     <description>
       User manual for the Search Tool application. 
     </description>
