@@ -1,3 +1,8 @@
+2002-07-05  Glynn Foster  <glynn.foster@sun.com>
+
+        * gnome-search-tool.desktop.in: s/DocPath/X-GNOME-DocPath. Now
+        conforms to spec.
+
 2002-06-19  Aruna Pourohit <aruna.pou@wipro.com>
 
         * gsearchtool.c: instead of just running search command, doing exec of
